Loading layout shift fix

--- a/src/components/pages/liquidity-page/components/Pools/DesktopPools/DesktopPools.module.css
+++ b/src/components/pages/liquidity-page/components/Pools/DesktopPools/DesktopPools.module.css
@@ -1,5 +1,5 @@
 .desktopPools {
-  border-radius: 24px;
+  border-radius: 16px;
   background-color: var(--background-grey-dark);
   border-collapse: collapse;
 }
